--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,19 @@ body {
   background: linear-gradient(blue , purple, pink);
   border-radius: 4px;
 }
+.custom_scrollbar_bottom::-webkit-scrollbar {
+  width: 4px;
+  height : 4px
+}
+
+.custom_scrollbar_bottom::-webkit-scrollbar-track {
+  background: #1f2937;
+}
+
+.custom_scrollbar_bottom::-webkit-scrollbar-thumb {
+  background: linear-gradient(blue , purple, pink);
+  border-radius: 4px;
+}
 
 .c::-webkit-scrollbar-thumb:hover {
   background: red;
