--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import "slick-carousel/slick/slick.css";
+@import 'slick-carousel/slick/slick-theme.css';
 
 
 :root {
@@ -33,7 +35,7 @@ body {
 }
 
 .custom_scrollbar::-webkit-scrollbar-track {
-  background: #1f2937;
+  /* background: #1f2937; */
 }
 
 .custom_scrollbar::-webkit-scrollbar-thumb {
@@ -46,7 +48,7 @@ body {
 }
 
 .custom_scrollbar_bottom::-webkit-scrollbar-track {
-  background: #1f2937;
+  /* background: #1f2937; */
 }
 
 .custom_scrollbar_bottom::-webkit-scrollbar-thumb {
